--- a/.env
+++ b/.env
@@ -29,8 +29,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=6106021611029@fitm.kmutnb.ac.th
-MAIL_PASSWORD=1209701910164
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
